# HYMT_WebView

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.bat  config.yaml  error.txt  index.html  package-lock.json  package.json  start.sh  stop.bat  stop.sh  tsconfig.json  vite.config.ts
legacy/: TranslatorServer.java  start.bat
legacy/web/: app.js  index.html  style.css
src/: App.svelte  TranslatorServer.java  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  llama.rs  main.rs  platform.rs  translate.rs
src-tauri/src/platform/: unix.rs  win.rs
src/lib/: api.ts  detect.ts  events.ts  types.ts  window.ts
src/lib/components/: EngineControl.svelte  StatusBar.svelte  TitleBar.svelte  Translator.svelte
web/: app.js
